--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/first_day_small.png" alt="" /></span>
 						</div>
 					</section>
 
@@ -74,7 +74,7 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Ultrices erat magna sed condimentum</h2>
+							<h2>My Projects</h2>
 						</header>
 						<div class="content">
 							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
@@ -82,12 +82,13 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Erat aliquam</h3>
-										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
+										<h3>Super</h3>
+										<p>Super is a content production platform for junior web developers inspired by Medium. Super is built with the MERN Stack
+										and supports creating, editing and categorizing articles.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/super-home.png" class="landscape"><img src="images/gallery/thumbs/super-home-thumb.png" alt="" /></a>
 											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
@@ -136,7 +137,7 @@
 						<div class="content">
 							<p>More<strong> Experience</strong> can be found on my resume below</p>
 							<ul class="actions">
-								<li><a href="#" class="button primary large">Take a look</a></li>
+								<li><a href="assets/resume.pdf" target="_blank" class="button primary large">Take a look</a></li>
 								<!-- <li><a href="#" class="button large">Learn More</a></li> -->
 							</ul>
 						</div>
