Adds main photo and project descriptions

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/first_day_small.png" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/waterfall.png" alt="" /></span>
 						</div>
 					</section>
 
@@ -44,7 +44,7 @@
 							<p><strong>A software engineer</strong> with a background in science education, I strive to write code 
 							that's easy to follow and understand. When I'm not behind the computer, you can find me biking around the 
 						city or trying out a new restaurant.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<span class="image main"><img src="" alt="" /></span>
 						</div>
 					</section>
 
@@ -77,7 +77,7 @@
 							<h2>My Projects</h2>
 						</header>
 						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+							<p>The following work highlights <strong>team and solo</strong> projects I've been contributing to in the past couple months.</p>
 
 							<!-- Section -->
 								<section>
@@ -99,8 +99,10 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Nisl consequat</h3>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
+										<h3>Twenty-48</h3>
+										<p>An undoubtedly addictive game, modeled after 2048, built with vanilla JavaScript,
+											HTML and CSS.
+										</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -114,8 +116,10 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Lorem gravida</h3>
-										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
+										<h3>Jogga</h3>
+										<p>A web based app used to map and track running routes. Jogga 
+											uses the MongoDB, Express, Node.js, and React as well as incorporating AWS and the Google Maps API
+										</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -417,8 +421,8 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Auctor commodo</strong> interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis.</p>
-							<form>
+							<p><strong>Contact</strong> me below if you have any questions or would like to connect.</p>
+							<form method="POST" action="mailto:alexcrisel4@gmail.com" enctype="text/plain" >
 								<div class="fields">
 									<div class="field half">
 										<input type="text" name="name" id="name" placeholder="Name" />
