Adds live project links

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Super</h3>
+										<h3><a href="https://thesuperapp.herokuapp.com/#/" target="_blank">Super</a></h3>
 										<p>Super is a content production platform for junior web developers inspired by Medium. Super is built with the MERN Stack
 										and supports creating, editing and categorizing articles.</p>
 									</header>
@@ -99,7 +99,7 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Twenty-48</h3>
+										<h3><a href="http://twenty48-4f6c8.firebaseapp.com/" target="_blank">Twenty-48</a></h3>
 										<p>An undoubtedly addictive game, modeled after 2048, built with vanilla JavaScript,
 											HTML and CSS.
 										</p>
@@ -116,7 +116,7 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Jogga</h3>
+										<h3><a target="_blank" href="http://jogga.herokuapp.com/">Jogga</a></h3>
 										<p>A web based app used to map and track running routes. Jogga 
 											uses the MongoDB, Express, Node.js, and React as well as incorporating AWS and the Google Maps API
 										</p>
