--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						<div class="content">
 							<p>More<strong> Experience</strong> can be found on my resume below</p>
 							<ul class="actions">
-								<li><a href="assets/resume.pdf" target="_blank" class="button primary large">Take a look</a></li>
+								<li><a href="assets/Alexander_Crisel_Resume.pdf" target="_blank" class="button primary large">Take a look</a></li>
 								<!-- <li><a href="#" class="button large">Learn More</a></li> -->
 							</ul>
 						</div>
